# emoji-cmd

./: README.md  README.rst  install.sh  pyproject.toml  requirements.txt
docs/emoji_cmd/: cli.html
html/emoji_cmd/: index.html
src/emoji_cmd/: __init__.py  cli.py
tests/: test_emoji_cmd.py
