[tool.poetry]
name = "emoji-cmd"
version = "1.0"
description = ""
authors = ["dtomlinson <dtomlinson@panaetius.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
emojis = "^0.5.1"
argparse = "^1.4"
texttable = "^1.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.740.0"
pdoc3 = "^0.7.2"

[tool.poetry.plugins."console_scripts"]
"emoji" = "emoji_cmd.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
